# lecture_feedback

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  LICENSE  README.md  conftest.py  main.py  pyproject.toml  requirements.txt  test_thread_safe_dict.py
.github/workflows/: ci.yml  conventional_commits.yml  lint_pr_title.yml
docs/: lessons-learned.md
src/lecture_feedback/: __init__.py  api_factory.py  app.py  application_state.py  browser_session.py  facade.py  gui.py  lecture_feedback_facade.py  plots.py  room.py  room_cleanup.py  room_manager.py  session_manager.py  session_state.py  sessions_tracker.py  state_facade.py  state_provider.py  stats_tracker.py  thread_safe_dict.py  types.py  user_session.py  user_stats_tracker.py  user_status.py
tests/: test_app.py  test_application_state.py  test_lecture_feedback_facade.py  test_room.py  test_state_and_room.py  test_stats_tracker.py  test_thread_safe_dict.py  test_user_stats_tracker.py
tests/bdd/: fixture.py  test_app_features.py  test_helper.py  test_multi_session.py  test_multiple_session.py  test_question_voting.py  test_room_cleanup.py  test_room_creation.py  test_single_session.py
tests/bdd/features/: app.feature  multi_session.feature  multiple_session.feature  question_voting.feature  room_cleanup.feature  single_session.feature
tests/bdd/steps/: common_steps.py
tests/unit/: test_thread_safe_dict.py
