[project]
name = "lecture-feedback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.49.1",
    "streamlit-autorefresh>=1.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lecture_feedback"]

[tool.ruff]
# Set line length to match common Python standards
line-length = 88


[tool.ruff.lint]
# Enable comprehensive linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "C90", # mccabe complexity
    "UP",  # pyupgrade (modern Python syntax)
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]


[tool.ruff.lint.isort]
known-first-party = ["lecture_feedback"]
