[project]
name = "lecture-feedback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.49.1",
    "streamlit-autorefresh>=1.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lecture_feedback"]

[tool.ruff]
# Set line length to match common Python standards
line-length = 88


[tool.ruff.lint]
# Enable comprehensive linting rules
select = [ "ALL" ]
ignore = [
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D203", # conflicts with D211
    "D212", # conflicts with D213
]

[tool.ruff.lint.isort]
known-first-party = ["lecture_feedback"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",  # Ignore missing module docstrings in tests
    "S101",  # Ignore use of assert detected in tests
    "PLR2004", # Allow magic numbers in tests
]


[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "streamlit_autorefresh.*",
]
ignore_missing_imports = true
